<resources>
    <string name="app_name">instaClone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">skip</string>
    <string name="the1">The One Percents</string>
    <string name="username">Username</string>
    <string name="ent_pswd">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Create Account</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_pswd">forgot password?</string>
    <string name="towards">Towards</string>
    <string name="or">OR</string>
    <string name="cont_with">continue with</string>
    <string name="google">Google</string>
    <string name="apple">Apple</string>
    <string name="enter_email">Enter your email ID</string>
    <string name="reset">Send reset link</string>
    <string name="fgp_line">Enter the email address associated with your account so we can send you the password reset link</string>
    <string name="quote_images">quote images</string>
    <string name="next">next button</string>
    <string name="pswd_show">show the password</string>
    <string name="create_ac_h">Create your account</string>
    <string name="create_ac_p">Enter the World of the 10% on Your Journey to Becoming the 1%</string>
    <string name="already_user">Already a user?</string>
    <string name="ask_email">Enter your valid email</string>
    <string name="verify">Verify email</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp_pera">We have sent you an OTP on your email address</string>
    <string name="send_otp">send OTP</string>
    <string name="not_get_otp">"Request a new OTP in:"</string>
    <string name="ent_con_pswd">Confirm password</string>
    <string name="continue_t">Continue</string>
    <string name="entPD">Primary details</string>
    <string name="mob_num">Mobile Number</string>
    <string name="country">Country</string>
    <string name="gender">Divine gender</string>
    <string name="dob">Date of birth</string>
    <string name="next_t">Next</string>
    <string name="be_real">Please share your primary details for security and identification purposes.</string>
    <string name="onlyTwoGend">There are only two genders on this planet, so please select one</string>
    <string name="choose_username">Choose Username</string>
    <string name="choose_username_p">Choose a unique username to personalize your profile and make it easy for others to find you. you can also change it later.</string>
    <string name="agTermsH">Agree to The 1%\'s policies, terms and conds.</string>
    <string name="agTermsP">tems pera</string>
    <string name="agCA"><![CDATA[Agree & create account]]></string>
    <string name="home">Home</string>
    <string name="blazes">Blazes</string>
    <string name="health">Health</string>
    <string name="empower">Empower</string>
    <string name="challange">Challenges</string>
    <string name="notifications">Notifications</string>
    <string name="chat">chat</string>
    <string name="menu">Menu</string>
    <string name="post">Post</string>
    <string name="upload_photo">Post Photo</string>
    <string name="media">Media</string>
    <string name="create_post_line">Share wisdom, stoicism, success &amp; more</string>
    <string name="report">Report</string>
    <string name="back">Back</string>
    <string name="messages">Messages</string>
    <string name="setting">settings</string>
    <string name="handler">\@dayashankar</string>
    <string name="edit_profile">Edit profile</string>
    <string name="analytics">Analytics</string>
    <string name="badge_icon">Badge icon</string>
    <string name="share_profile">share this profile</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="askBmi">To receive tailored suggestions, please provide your weight and height.</string>
    <string name="entW">Weight in KG</string>
    <string name="engHeight">Height in CM</string>
    <string name="submit">Submit</string>
    <string name="challangeLine">We dare to conquer challenges</string>
    <string name="Bmr">BMR</string>
    <string name="info">information</string>
    <string name="ok">OK</string>
    <string name="edit">edit</string>
    <string name="kcal">Kcal</string>
    <string name="bmi">BMI</string>
    <string name="sedentary">Sedentary</string>
    <string name="slightly_active">Slightly active</string>
    <string name="moderately_active">Moderately active</string>
    <string name="very_active">Very active</string>
    <string name="extremely_active">Extremely active</string>
    <string name="strength">Strength</string>
    <string name="strengthen_your">Strengthen your -</string>
    <string name="body">Body</string>
    <string name="mind">Mind</string>
    <string name="set_priorities">Set today\'s priorities</string>
    <string name="if_you_have_more_than_three_priorities_then_you_don_t_have_any">If you have more than three priorities, then you don\'t. have any.</string>
    <string name="complete">Complete</string>
    <string name="change">Change</string>
    <string name="type_here">Type here..</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
    <string name="do_complete_them">Do complete Them</string>
    <string name="you_have_limited_time_on_earth_so_use_it_to_build_yourself">You have limited time on earth, so use it to build yourself</string>
    <string name="add">Add</string>
    <string name="train_your_body">Train your body</string>
    <string name="at_home">At home</string>
    <string name="in_gym">In gym</string>
    <string name="depression">Depression</string>
    <string name="cure_your_mind">Cure your mind</string>
    <string name="anxiety_disorder">Anxiety disorder</string>
    <string name="loneliness">loneliness</string>
    <string name="overthinking">Overthinking</string>
    <string name="you_are_what_you_eat">You are what you eat</string>
    <string name="let_s_make_it_clean">Let\'s make it clean</string>
    <string name="boost_your_brainpower_and_thinking_skills">Boost brainpower &amp; thinking skills. without intelligence you have no power</string>
    <string name="master_the_art_of_eloquent_and_effective_communication">Master the art of eloquent and effective communication.</string>
    <string name="become_the_powerful_person_wherever_you_stand">Become the charismatic and powerful person wherever you stand.</string>
    <string name="develop_your_character">Develop your character</string>
    <string name="add_your_addictions">Add Your Addictions</string>
    <string name="know_about_it">know about it</string>
    <string name="enter_the_addiction_you_want_to_break">Enter the addiction you want to break</string>
    <string name="days">Days</string>
    <string name="today_s_schedule">Create today\'s schedule</string>
    <string name="alarm_watch">alarm watch</string>
    <string name="intelligence">Intelligence</string>
    <string name="power_character">Power/ Character</string>
    <string name="communication">Communication</string>
    <string name="build_your_skills_not_your_resume">Build your skills not your resume</string>
    <string name="it_only_takes_focus_consistency_and_20_hours_to_6_months_to_master_a_new_skill">It only takes focus, consistency, and twenty hours to six months to master a new skill</string>
    <string name="add_skills_to_master">Add skills to master</string>
    <string name="addiction_is_just_short_term_pleasure">Addiction is just short-term pleasure</string>
    <string name="choose_the_pain_of_regret_or_the_pain_of_discipline_nothing_in_this_world_is_beyond_human_reach">Choose the pain of regret or the pain of discipline; nothing in this world is beyond human reach</string>
    <string name="once_it_s_passed_it_never_comes_back">Once it\'s passed, it never comes back</string>
    <string name="everyone_gets_time_to_change_their_life_no_one_gets_life_to_change_time_so_use_it_wisely">Everyone gets time to change their life; no one gets life to change time, so use it wisely</string>
    <string name="vertical_bar">|</string>
    <string name="physical_strength_amp_power"><![CDATA[Physical Strength & power]]></string>
    <string name="make_your_body_so_strong_that_disease_and_ill_minds_cannot_become_obstacles_in_your_path">Make your body so strong that disease and ill minds cannot become obstacles in your path</string>
    <string name="learn">Learn</string>
    <string name="comhub">ComHub</string>
    <string name="add_priorities">Add priorities</string>
    <string name="social_media">Social Media</string>
    <string name="masturbation">Masturbation</string>
    <string name="porn_addiction">Porn Addiction</string>
    <string name="smoking_addiction">Smoking Addiction</string>
    <string name="addictions_support">Addictions support</string>
    <string name="all">All</string>
    <string name="science">Science</string>
    <string name="space">Space</string>
    <string name="ideas">Ideas</string>
    <string name="driveluxe">Driveluxe</string>
    <string name="nature">Nature</string>
    <string name="agriculture">Agriculture</string>
    <string name="workouts">Workouts</string>
    <string name="sigmaverse">SigmaVerse</string>
    <string name="follow">Follow</string>
    <string name="comments">comments</string>
    <string name="share_this_post">share this post</string>
    <string name="save_this_post">save this post</string>
    <string name="ago">ago</string>
    <string name="like_this_post">like this post</string>
    <string name="ad">AD</string>
    <string name="content">content</string>
    <string name="time_is_left">Time is Left</string>
    <string name="dopa_window_is_open">Dopa window is open</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="account_center">Account center</string>
    <string name="app_settings">App settings</string>
    <string name="saved_items">Saved items</string>
    <string name="history">History</string>
    <string name="monetization">Monetization</string>
    <string name="advertisement">Advertisement</string>
    <string name="account_security">Security</string>
    <string name="account_controls">Controls</string>
    <string name="contacts">Contacts</string>
    <string name="dark_mode">Bat mode</string>
    <string name="ui_mode">UI mode</string>
    <string name="about">About</string>
    <string name="help_center">Help center</string>
    <string name="privacy_amp_terms"><![CDATA[Privacy & Terms]]></string>
    <string name="when_you_finish_a_blaze_another_plays_automatically">When blaze plays three times, another automatically starts</string>
    <string name="autoplay_next_blaze">Autoplay next blaze</string>
    <string name="documentations">Documentations</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="cookie_policy">Cookie Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="open_source_licence_amp_libraries"><![CDATA[Open source Licence & Libraries]]></string>
    <string name="contact">Contact</string>
    <string name="careers_evourse">Careers @ Evourse</string>
    <string name="from_earth">From Earth</string>
    <string name="you_can_turn_off_your_watch_history_to_save_it">You can turn off your watch history to save it</string>
    <string name="profile_analytics">Profile analytics</string>
    <string name="views">Views</string>
    <string name="estimated_earnings">Estimated earnings</string>
    <string name="avg_engagement_time">Avg. engagement time</string>
    <string name="monetize_your_content">Monetize your content</string>
</resources>